# sBitx-modem

./: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  FFT.h  es8388_registers.h  idf_component.yml  init_LyraT.h  main.c  main_sbitx_modem.c
